--- a/9_1.css
+++ b/9_1.css
@@ -1,3 +1,6 @@
+body {
+    font-size: 3vw;
+}
 h2 {
     color: red;
 }
@@ -32,22 +35,22 @@ h2 {
 }
 
 #profile_pic {
-    width: 100px;
-    height: 100px;
+    width: 20vw;
+    height: 20vw;
 }
 
 #profile_info {
     display: grid;
     grid-template-rows: 1fr 1fr;
 
-    height: 50px;
+    height: 15vw;
 
     margin-left: 3vw;
 }
 
 .highlight_pic {
-    width: 70px;
-    height: 70px;
+    width: 20vw;
+    height: 20vw;
 
     margin-left: auto;
     margin-right: auto;
@@ -57,14 +60,14 @@ h2 {
     width: 100%;
     height: 100%;
 
-    border: solid white 1px;
-    border-radius: 50px;
+    border: solid white 0.3vw;
+    border-radius: 20vw;
     object-fit: cover;
 }
 
 #highlight_area {
     display: grid;
-    grid-template-columns: 80px 80px 1fr;
+    grid-template-columns: 22vw 22vw 1fr;
 }
 
 .highlight {
@@ -72,7 +75,7 @@ h2 {
 }
 
 #id {
-    font-size: 18px;
+    font-size: 4.5vw;
     font-weight: 1000;
 }
 
@@ -84,46 +87,45 @@ button {
     height: 120%;
     width: 95%;
 
-    font-size: 15px;
+    font-size: 3vw;
     font-weight: bold;
     background-color: white;
-    border: solid rgb(99, 208, 251) 2px;
-    border-radius: 10px;
+    border: solid rgb(99, 208, 251) 0.3vw;
+    border-radius: 3vw;
 }
 
 #top {
     display: grid;
     grid-template-columns: 4fr 7fr 4fr;
 
-    height: 30px;
+    height: 5vw;
+    min-height:5vw;
 
-    border-bottom: solid gray 0.1px;
+    border-bottom: solid gray 0.05vw;
 
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: 2vw;
+    margin-top: 2vw;
 }
 
 #top img {
-    margin-left: auto;
-    margin-right: auto;
-
     height: 100%;
+    margin-left: 2vw;
     object-fit: contain;
 }
 
 #top input {
-    margin-left: 8px;
-    margin-top: 2px;
-
-    height: 70%;
+    height: 90%;
     width: 80%;
 
-    font-size: 13px;
+    font-size: 3vw;
     font-weight: bold;
 
     background-color: white;
-    border: solid rgb(155, 255, 4) 2px;
-    border-radius: 10px;
+    border: solid rgb(155, 255, 4) 0.3vw;
+    border-radius: 2vw;
+
+    margin-left:5vw;
+    margin-bottom:1vw;
 }
 
 i {
@@ -131,24 +133,21 @@ i {
 }
 
 #top i {
-    font-size: 14px;
+    font-size: 3.5vw;
 }
 
 #top div {
     text-align: center;
-
-    margin-bottom: 10px;
-    padding-top: 6px;
-    padding-right: 30px;
+    padding-top: 0.2vw;
 }
 #sub_icons{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
     text-align: center;
-    font-size: 15px;
+    font-size: 5vw;
 
-    height: 30px;
+    height: 8vw;
 }
 .selected {
     border-bottom: solid gray 3px;
